--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
           <button class="button-30" role="button"><a href="https://www.analyticsvidhya.com/">Analytics Vidhya</a></button>
           <button class="button-30" role="button"><a href="https://www.kdnuggets.com/">KDnuggets</a></button>
           <button class="button-30" role="button"><a href="https://www.kaggle.com/">Kaggle</a></button>
+          <button class="button-30 bg-info" role="button"><a href="https://relevel.com/">Relevel</a></button>
         </center>
 
         </div>
@@ -661,20 +662,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
-            <div class="credits">
-              
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
+  
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
