DSA+ML related sites

--- a/index.html
+++ b/index.html
@@ -126,7 +126,33 @@
           <button class="button-30" role="button"><a href="https://www.kaggle.com/">Kaggle</a></button>
           <button class="button-30" role="button"><a href="https://www.quora.com/profile/Balbir-Yadav-28">Quora</a></button>
           <button class="button-30" role="button"><a href="https://www.linkedin.com/in/balbir-yadav-9775bb1b3/">LinkedIn</a></button>
+          <button class="button-30" role="button"><a href="https://leetcode.com/">LeetCode</a></button>
+          <button class="button-30" role="button"><a href="https://www.codechef.com/">Codechef</a></button>
+          <button class="button-30" role="button"><a href="https://www.codingninjas.com/codestudio">CodeStudio</a></button>
+        
         </center>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="timetable" class="services-mf pt-5 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h5 class="title-a">
+               Knowledge Blogs On
+              </h5>
+              <p class="subtitle-a">
+                
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+          <center>      
+          <button class="button-30" role="button"><a href="https://blog.paperspace.com/intro-to-optimization-in-deep-learning-gradient-descent/">Gradient Descent</a></button>
+          </center>
 
         </div>
       </div>
@@ -165,7 +191,7 @@
                 Popular Websites for Coding Enthusiast 
               </h5>
               <p class="subtitle-a">
-                Blogs | Error Solving | Coding | Data Science | ML | DL 
+                Blogs | Error Solving | Coding | Data Science | ML | DL | DSA
               </p>
               <div class="line-mf"></div>
             </div>
@@ -177,7 +203,10 @@
           <button class="button-30" role="button"><a href="https://www.analyticsvidhya.com/">Analytics Vidhya</a></button>
           <button class="button-30" role="button"><a href="https://www.kdnuggets.com/">KDnuggets</a></button>
           <button class="button-30" role="button"><a href="https://www.kaggle.com/">Kaggle</a></button>
-          <button class="button-30 bg-info" role="button"><a href="https://relevel.com/">Relevel</a></button>
+          <button class="button-30" role="button"><a href="https://relevel.com/">Relevel</a></button>
+          <button class="button-30 bg-info" role="button"><a href="https://leetcode.com/">LeetCode</a></button>
+          <button class="button-30 bg-info" role="button"><a href="https://www.codechef.com/">Codechef</a></button>
+          <button class="button-30 bg-info" role="button"><a href="https://www.codingninjas.com/codestudio">CodeStudio</a></button>
         </center>
 
         </div>
